# fastfingers

./: .gitignore  AUTHORS  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  NEWS  README.md  cards.c  cards.h  clean.sh  f.c  fastfingers.c  ff_application.c  ff_application.h  ff_cards.c  ff_cards.h  ff_home.c  ff_home.h  ff_practice.c  ff_practice.h  ff_style.css  ff_utils.c  ff_utils.h  fflib.c  fflib.h  home.c  home.h  intro.mkv  main.c  makefile  practice.c  practice.h  style.css
.github/workflows/: cmake.yml
data/: org.ccextractor.Cheatsheet.desktop.in  org.ccextractor.FastFingers.desktop.in  org.ccextractor.FastFingers.gschema.xml
data/applications/: appdata.json  firefox.json  firefox.json~  gimp.json  postman.json  slack.json  thunderbird.json  vlc.json  vscode.json
debian/: fastfingers_0.7.11_all.deb
gtk4/: CMakeLists.txt  FastFingers.css  active-window.c  application-page.c  application-page.h  button-box.c  button-box.h  card.c  card.h  cheatsheet.c  cheatsheet.h  credits-page.c  fastfingers.c  fastfingers.h  ff-utils.c  ff-utils.h  home-page.c  home-page.h  key.c  key.h  main.c  org.ccextractor.FastFingers.gresource.xml  practice-page.c  practice-page.h  reset-progress-page.c  reset-progress-page.h  settings-page.c  settings-page.h  shortcut-list-row.c  shortcut-list-row.h  trayicon.cpp  trayicon.h
gtk4/cmake/: Desktop.cmake  GSettings.cmake  Icons.cmake
gtk4/ui/: application-page.ui  button-box.ui  card.ui  cheatsheet.ui  credits-page.ui  fastfingers.ui  home-page.ui  key.ui  practice-page.ui  reset-progress-page.ui  settings-page.ui  shortcut-list-row.ui
package_creators/: PKGBUILD  arch.sh  debian.sh  fastfingers.spec  rpm.sh  snapcraft.yaml
src/: CMakeLists.txt  FastFingers.css  active-window.c  active-window.h  application-page.c  application-page.h  button-box.c  button-box.h  cJSON.h  card.c  card.h  cheatsheet.c  cheatsheet.h  credits-page.c  credits-page.h  fastfingers.c  fastfingers.h  ff-utils.c  ff-utils.h  home-page.c  home-page.h  key.c  key.h  main.c  org.ccextractor.FastFingers.gresource.xml  org.ccextractorFastFingers.gresource.xml  practice-page.c  practice-page.h  quiz-page.c  quiz-page.h  quiz-result-page.c  quiz-result-page.h  reset-progress-page.c  settings-page.c  settings-page.h  shortcut-list-row.c  shortcut-list-row.h  trayicon.cpp
src/cmake/: Data.cmake  Desktop.cmake  GSettings.cmake  Icons.cmake
src/ui/: application-page.ui  button-box.ui  card.ui  cheatsheet.ui  credits-page.ui  fastfingers.ui  home-page.ui  key.ui  practice-page.ui  quiz-page.ui  quiz-result-page.ui  reset-progress-page.ui  settings-page.ui  shortcut-list-row.ui
